[project]
name = "neurotrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.3.0",
    "langchain-tavily>=0.2.1",
    "langchain[google-genai]>=0.3.25",
    "langgraph>=0.4.8",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
