[project]
name = "neurotrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "google-generativeai>=0.8.5",
    "ipython>=9.3.0",
    "isort>=6.0.1",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "langchain-tavily>=0.2.1",
    "langchain[google-genai]>=0.3.25",
    "langgraph>=0.4.8",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.black]
line-length = 120
